--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.13MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.04MB/s(Youtube:不良林), server: zz6.91js.pw, port: 10051, type: trojan, password: a13820c547fa34c5c45515c12f0cd576, sni: zz6.91js.pw, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.71MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.90MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.48MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-1.58MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.82MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 12337, type: trojan, password: df8ebf95-bd60-4f7e-a505-fe8db5ba3342, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32913, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: gb.v2yyds.com, skip-cert-verify: true}
   - {name: 🇯🇵 日本-2.24MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 伊朗-423.3KB/s(Youtube:不良林), server: de.v2yyds.com, port: 31913, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: de.v2yyds.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-894.8KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
   - {name: 🇨🇳 中国-1.41MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-354.5KB/s(Youtube:不良林), server: 185.172.113.102, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-308.1KB/s(Youtube:不良林), server: 185.172.113.102, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-380.2KB/s(Youtube:不良林), server: 185.172.113.101, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 台湾-360.5KB/s(Youtube:不良林), server: tw.suntory.lol, port: 38511, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: tw.suntory.lol, skip-cert-verify: true}
+  - {name: 未知国家-1.89MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
+      - 伊朗-423.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-894.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-308.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-360.5KB/s(Youtube:不良林)
+      - 未知国家-1.89MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
+      - 伊朗-423.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-894.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-308.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-360.5KB/s(Youtube:不良林)
+      - 未知国家-1.89MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
+      - 伊朗-423.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-894.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-308.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-360.5KB/s(Youtube:不良林)
+      - 未知国家-1.89MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-360.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
+      - 伊朗-423.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-894.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-308.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-360.5KB/s(Youtube:不良林)
+      - 未知国家-1.89MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
+      - 伊朗-423.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-894.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-308.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-360.5KB/s(Youtube:不良林)
+      - 未知国家-1.89MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
+      - 伊朗-423.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-894.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-308.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-360.5KB/s(Youtube:不良林)
+      - 未知国家-1.89MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
+      - 伊朗-423.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-894.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-308.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-360.5KB/s(Youtube:不良林)
+      - 未知国家-1.89MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
