--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-6.17MB/s(Youtube:不良林), server: 116.63.103.11, port: 45758, type: vmess, uuid: 311e647a-c835-492a-b685-b159c0c78683, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
-  - {name: 🇭🇰 香港-1.30MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇨🇳 中国-4.49MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.48MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.24MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.39MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-387.0KB/s(Youtube:不良林), server: 185.172.113.106, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-354.5KB/s(Youtube:不良林), server: 185.172.113.102, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-308.1KB/s(Youtube:不良林), server: 185.172.113.102, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-368.5KB/s(Youtube:不良林), server: 185.172.113.101, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 台湾-360.5KB/s(Youtube:不良林), server: tw.suntory.lol, port: 38511, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: tw.suntory.lol, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
+  - {name: 🇺🇸 美国-3.69MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.11MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-599.4KB/s(Youtube:不良林), server: 81.90.190.81, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-599.0KB/s(Youtube:不良林), server: 185.172.113.101, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-580.2KB/s(Youtube:不良林), server: 185.172.113.106, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 台湾-7.34MB/s(Youtube:不良林), server: tw.suntory.lol, port: 38513, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: tw.suntory.lol, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-963.4KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-387.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-354.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-308.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-360.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-599.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-599.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-580.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-387.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-354.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-308.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-360.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-599.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-599.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-580.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-387.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-354.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-308.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-360.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-599.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-599.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-580.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-360.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-387.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-354.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-308.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-360.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-599.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-599.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-580.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-387.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-354.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-308.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-360.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-599.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-599.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-580.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-387.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-354.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-308.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-360.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-599.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-599.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-580.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-387.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-354.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-308.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-360.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-599.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-599.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-580.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
